added basic description of site including logo details etc.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!-- 
-new planning:
-pg 1.
-landing page
+new design:
+pg 1: landing page
+
+
+logo: Make sure it looks simple , generic and illustrative with very simple single sign and simple object 
 
 Maunny has all dealership operations online 
-
-top 4 and contact at bottom, forms and chat bar
 
 Money is Maunny and Maunny is money 
 
 
+top 4 and contact at bottom, forms and chat bar
+1. 
+
+2. 
+Water sport, motorsport, McLaren F1 car racing, NASCAR, bike wear, motor cycle clothing 
+
+Design your own clothing, choose your logo style and positioning, choose your size and shape
+
+3.
+
+4.
+
+
+
+
+
+
 pg 2. Sales: search a vehicle new and used , reviews
+
+
+
+
 
 pg 3. Finance: payment calculator, online consult
 
@@ -20,6 +41,11 @@ pg 5. Window mechanic for service advice and scheduler, reviews and manuals
 
 pg 6. contact us
 
+
+Logo colour
+color: 1. Aqua blue
+2. Orchid purple 
+3. Royal blue 4
 
 
 
