added necessary instructions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ Money is Maunny and Maunny is money
 
 
 top 4 and contact at bottom, forms and chat bar
-1. 
+1. payment calculator
+You can link carfax report on your site and get data from other sites, same thing for credit check 
 
 2. 
 Water sport, motorsport, McLaren F1 car racing, NASCAR, bike wear, motor cycle clothing 
@@ -19,6 +20,7 @@ Water sport, motorsport, McLaren F1 car racing, NASCAR, bike wear, motor cycle c
 Design your own clothing, choose your logo style and positioning, choose your size and shape
 
 3.
+You can provide technical help through mechanics, recommendations, incl for DY parts , quotations, 
 
 4.
 
@@ -48,6 +50,30 @@ color: 1. Aqua blue
 3. Royal blue 4
 
 
+
+//pseudocode
+On the left menu bar you can choose options on the site, such as draggable to get the demo how to use it 
+Maunny chat or dialougue box can use modal bootstrap properties, https://getbootstrap.com/docs/4.3/components/modal/
+For Maunny you will use similar array style for selections by user as similar to password generator, study arrays to depth and and you will be pushing arrays, storing info in local storage or variables
+Also you can create taskinator/task or task master to create schedules for people to trace their service schedule 
+Form Reset: https://developer.mozilla.org/en-US/docs/Web/API/HTMLFormElement/reset
+Submit button: and add the following code in its place:
+var formEl = document.querySelector("#task-form");
+At the bottom of script.js, remove the code to add an event listener to buttonEl and add the following code in its place:
+formEl.addEventListener("submit", createTaskHandler);
+Maunny list dropdown
+<div class="form-group">
+  <select name="task-type">
+    <option value="" disabled selected>Pick a task type</option>
+    <option value="Print">Print</option>
+    <option value="Web">Web</option>
+    <option value="Mobile">Mobile</option>
+  </select>
+</div>
+To import a Google Font, you can copy the font's URL from the Google Fonts library and then paste it in your HTML. For this challenge, we'll import the Lobster font. 
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight
+You can use double image techniques as mentioned in email
 
 
 
