minor changes description

--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@ pg 6. contact us
 
 
 Logo colour
-color: 1. Aqua blue
+color: 1. Aqua blue (choose coral greenish aqua or similar to coral turqoise)
 2. Orchid purple 
 3. Royal blue 4
 
+
+//Step #1: Build a Small Application: use 3rd party API to import some valuable data from other sides
+With your new skills, you may be tempted to incorporate external data in your existing portfolio, like displaying today's weather. But why not take things a step further? Try building a small application that's enticing to prospective employers. For example, you could build a dynamic weather app that uses the browser API to get the user's location, then makes a request to an external API to display the weather. Be sure to push the final page to GitHub, get a live site going, and write a fully formed README file.
 
 
 //pseudocode
@@ -82,11 +85,7 @@ old planning to be fixed:
 
 For whole website: Main 6 colours, main 3 on top
 
-MAIN 3 theme and logo center focus colours: Aqua or turquoise blue, purple and purplish or majenta red
-
-Additional tuqiose OR Aqua blue
-
-Other 3 are background colours only royal blue, purplish pink, and white
+Other 3 are background colours only artic ice grey, purplish pink, and white
 
  
 
@@ -105,39 +104,8 @@ Modern fonts
 
 Maunny Halvetica 
 
-On Apple computer there are applications with font manager 
 
- 
-
- 
-
- 
-
-Main short form logos, or center object is letter ‘M’ as decidedin sextagon same colour as font
-
-Main 2 logos with full name some stripes design, 6 each side same colour as font
-
- 
-
- 
-
- 
-
-One white backround main one, beginning with with light blue and purple mix (MAU then NNY)
-
- 
-
-one dark backround -royal blue, beginning with purple and ending with majenta red (MAU then NNY)
-
- 
-
- 
-
-FONT CHOICE; —Please continue geometrically on font on drawing of LOGO, otherwise for rest website, choose a fontbased on research
-
- 
-
- 
+HERE 
 
 https://www.logaster.com/blog/how-to-choose-font-for-logo/
 
