site preplanned, next is draw.io and psuedocode

--- a/index.html
+++ b/index.html
@@ -2,29 +2,35 @@
 new design:
 pg 1: landing page
 
-
+header, nav
 logo: Make sure it looks simple , generic and illustrative with very simple single sign and simple object 
 
 Maunny has all dealership operations online 
 
-Money is Maunny and Maunny is money 
+Money is Maunny and Maunny is money. 
 
 
-top 4 and contact at bottom, forms and chat bar
-1. payment calculator
-You can link carfax report on your site and get data from other sites, same thing for credit check 
+ top 4 and contact at bottom, forms and chat bar, following are the sections, sign up button to be a member what free services you will get, use facebook/google login
 
-2. 
-Water sport, motorsport, McLaren F1 car racing, NASCAR, bike wear, motor cycle clothing 
+1. First section vehicle pics demos/models create kick energetic motivation, with chat with link to main application form for maunny’s club . Hit button form will come,
+lead generation vehicle search suggestions (only suggestions email, no force, if interested call)
 
-Design your own clothing, choose your logo style and positioning, choose your size and shape
+2. payment calculator
+You can link carfax report on your site and get data from other sites, same thing for credit check, third link to sell vehicle trade in 
 
 3.
-You can provide technical help through mechanics, recommendations, incl for DY parts , quotations, 
+First section vehicle demos with chat with link to main application form for maunny’s club . Hit button form will come, 
+water sport, motorsport, McLaren F1 car racing, NASCAR, bike wear, motor cycle clothing 
+register to get free T-shirt , design yourself
+Design your own clothing, choose your logo style and positioning, choose your size and shape
 
 4.
+You can provide technical help through mechanics, recommendations, incl for DY parts, quotations, 
+Section reviews with graphs if any, trade show reviews and reviews in general for purchase 
 
+5. Testimonials (can include videos here)
 
+6. contact us and copyright
 
 
 
@@ -125,21 +131,13 @@ Automotive Web Solutions
 
 https://800response.com/lp/generate-leads-with-vanity-800-numbers/?gclid=EAIaIQobChMIucKUqrPb7AIVCZSzCh0wnQg9EAAYAyAAEgLCH_D_BwE 
 
- 
 
 type "how to get 1800 number" on google 
 
  
 
- 
-
-There is no add for google, use google for SEO, and distribution of straight link to your site, if anything promo
-
- 
-
 https://www.youtube.com/results?search_query=how+to+choose+fonts+for+logo
 
- 
 
 https://www.youtube.com/results?search_query=how+to+choose+colour+theme+for+website
 
@@ -151,63 +149,15 @@ Maunny makes money
 
 modern millionaires (check google) for marketing tip
 
- 
-
-LOGO with 6 checkers (as in cell pic)
-
- 
-
 Small logo in sextagon
 
- 
 
- 
 
-register to get free T-shirt , design yourself
 
- 
-
- 
-
-Maunny 6 pages
-
-First page 6 sections , rest pages 3 sections each, can use gifs for videos or video in beginning only rel to Model info (energetic)
-
- 
-
-Lead generation front 3 pages 
-
-First page 3 sections 1 video, 2 gifs ( 1 with application):
-
-First section vehicle demos with chat with link to main application form for maunny’s club . Hit button form will come, link to credit appl/payment calculator and third link to sell vehicle trade in
-
-Second section proving the benefit for choosing our services inclcar/electronics pics, improve credit or get credit, or sell vehicle, 
-
-Third section reviews with graphs if any, also contact info in very beginning or end. (disclaimer privacy, copyright or trademark etc.)
 
 Other two pages 3 sections each, one for credit app (payment calculator) save time if not sure be approved (1 to 1 with finance manager), and one for trade or sell in vehicle
 
 Through Maunny’s club: (Main target is to get people into this club)
-
-1.Lead generation vehicle search suggestions (only suggestionsemail, no force, if interested call)
-
- 
-
-2.Mechanic diagrams
-
-3.Vehicle purchase reviews, specs, auto show reviews and details
-
-Other 3 pages
-
-Page 4: Automotive Graphic solutions (portfolio)-anytime asked on Linkedin offer this link (3 sections)
-
-Page 5: Automotive web solutions (portfolio)- speed chat type your web issue - anytime asked on Linkedin offer this link (3 sections)
-
-Page 6: contact us including careers and main team member girls with pictures and contact method for dealers to get enrolled through dealer service reps, 1800 number on add, on front of site and one here. 
-
-
-
- 
 
  
 
@@ -215,26 +165,8 @@ Main corporation Maunny Inc., copyrights and tm
 
 Actual wording: ‘Maunny’s Automotive Club’ 
 
+HERE
 
-
- 
-
-page by page section by section only (measurements), (or make rough on paper draw), main3 colours and top 6 colours, theming
+-->
 
  
-
-Main 3 sections every page pattern in similar for every page
-
-1. What we offer – pics, vehicles, electronics, gif/video, important links incl link to main application 
-2. What is benefit of getting particular service pics vehicles/electronics
-3. Reviews with graphs
- 
-
-About us/contact 
-
-Main contact incl dealer services
-
-Testimonial reviews with mission statement
-
-
- -->
