added a menu navigation and choice of colouring

--- a/index.html
+++ b/index.html
@@ -1,5 +1,53 @@
+<!-- Waheguru -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maunny's Automotive Club</title>
+  <link href="https://fonts.googleapis.com/css?family=‘Kayak’" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/styles/style.css" />
+  
+</head>
+<body>
+  <header class="menu">
+    <h1>MAUNNY</h1> 
+   
+    <!--following  is a mix choice-->
+    <!-- <h1>MA<span class="logo-colour-mix1">UN</span><span class="logo-colour-mix2">NY</span></h1> -->
+    <nav>
+        <!-- unordered list of navigation begins-->
+        <ul>
+            <li>
+                <!-- navigation has been linked on same page using # using anchor element-->
+                <a href="lead-generation"><h3>Search a Vehicle</h3></a>
+            </li>
+            <li>
+                <a href="#auto-finance"><h3>Financing a Vehicle</h3></a>
+            </li>
+            <li>
+                <a href="#Maunny's-Automotive-Club"><h3>Join the Club</h3></a>
+            </li>
+            <li>
+              <a href="#window-mechanic"><h3>24hr Online Mechanic</h3></a>
+          </li>
+        </ul>
+    </nav>
+</header>
+<section class= "container">
+<div class ="div">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias alias harum reiciendis dolorum fugiat fugit numquam distinctio debitis culpa? Molestias dolores odit minus voluptas ullam illum sapiente! Rem, expedita earum!</div>
+</section>
+
+  
+</body>
+</html>
+
+
+
+
 <!-- 
-new design:
+new design: refer carklicks to merge data
 pg 1: landing page
 
 header, nav
@@ -50,10 +98,10 @@ pg 5. Window mechanic for service advice and scheduler, reviews and manuals
 pg 6. contact us
 
 
-Logo colour
-color: 1. Aqua blue (choose coral greenish aqua or similar to coral turqoise)
-2. Orchid purple 
-3. Royal blue 4
+text and logo colour
+color: 1. royal blue 
+2. blueviolet 
+3. orchid 
 
 
 //Step #1: Build a Small Application: use 3rd party API to import some valuable data from other sides
@@ -91,7 +139,10 @@ old planning to be fixed:
 
 For whole website: Main 6 colours, main 3 on top
 
-Other 3 are background colours only artic ice grey, purplish pink, and white
+Other 3 are background colours only 
+1. white
+2. light atric ice
+2. light aquamarine 
 
  
 
