--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
   <header class="menu">
     <h1>MAUNNY</h1> 
    
-    <!--following  is a mix choice-->
+
+
+
+    <!-- 
+please make draw.io, then pseudocode , consult famous sites 
+     -->
+
+
+
+
+
+
+
+     <!--following  is a mix choice-->
     <!-- <h1>MA<span class="logo-colour-mix1">UN</span><span class="logo-colour-mix2">NY</span></h1> -->
     <nav>
         <!-- unordered list of navigation begins-->
