section one added basic structure

--- a/index.html
+++ b/index.html
@@ -49,7 +49,108 @@ please make draw.io, then pseudocode , consult famous sites
     </nav>
 </header>
 <section class= "container">
-<div class ="div">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias alias harum reiciendis dolorum fugiat fugit numquam distinctio debitis culpa? Molestias dolores odit minus voluptas ullam illum sapiente! Rem, expedita earum!</div>
+  <div class = "heading"><h1>Vehicle Search Inquiry</h1></div>
+  <div class = "inquiry">
+    <!-- this part will have 2 divs 50%, one inquiryText and other inquiryPicture for picture section, change id and class names as needed  -->
+    <br>
+    <br>
+    <br>
+    <form>
+    <label for="cars">Year:</label>
+  <select id="year">
+    <option value="2006">2006</option>
+    <option value="2007">2007</option>
+    <option value="2008">2008</option>
+    <option value="2009">2009</option>
+    <option value="2010">2010</option>
+    <option value="2011">2011</option>
+    <option value="2012">2012</option>
+    <option value="2013">2013</option>
+    <option value="2014">2014</option>
+    <option value="2015">2015</option>
+    <option value="2016">2016</option>
+    <option value="2017">2017</option>
+    <option value="2018">2018</option>
+    <option value="2019">2019</option>
+    <option value="2020">2020</option>
+    <option value="2021">2021</option>
+    <option value="YYYY" selected>YYYY</option>
+  </select>
+<br>
+<br>
+<label for="cars">Make:</label>
+<select id="make">
+  <option value="GM">GM</option>
+  <option value="Ford">Ford</option>
+  <option value="Chrysler">Chrysler</option>
+  <option value="Toyota">Toyota</option>
+  <option value="Lexus">Kia</option>
+  <option value="Nissan">Nissan</option>
+  <option value="Mitsibuishi">Mitsibuishi</option>
+  <option value="Honda">Honda</option>
+  <option value="Mazda">Mazda</option>
+  <option value="Kia">Kia</option>
+  <option value="Hyundai">Hyundai</option>
+  <option value="Subaru">Subaru</option>
+  <option value="Chevrolet">Chevrolet</option>
+  <option value="Mercedes">Mercedes</option>
+  <option value="BMW">BMW</option>
+  <option value="Volkswagen">Volkswagen</option>
+  <option value="Porsche">Porsche</option>
+  <option value="Acura">Acura</option>
+  <option value="Dodge">Dodge</option>
+  <option value="Jeep">Jeep</option>
+  <option value="YYYY" selected>----</option>
+</select>
+<!-- you can use getelementbyID and attach models when users click on make, as event listener, list can populate for that make for models-->
+<br>
+<br>
+<label for="cars">Mileage in km:</label>
+<select id="Mileage">
+  <option value="50">0 to 50,000 km</option>
+  <option value="100">50,000 to 1,00,000 km</option>
+  <option value="150">1,00,000 to 1,50,000 km</option>
+  <option value="200">1,50,000 to 2,00,000 km</option>
+  <option value="250">2,00,000 to 2,50,000 km</option>
+  </select>
+  <br>
+  <br>
+  <button type="submit" name="submit" value="submit">Submit</button>
+</form>
+  </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class = "interest">
+<form class = "interest">
+  <br>
+<br>
+<br>
+<label for="customer"><h4>Select vehicle</h4></label>
+<br>
+  <label for="customer">Stock# of vehicle</label>
+<input type = "text"></input>
+<label for="customer">Your name</label>
+<input type = "text"></input>
+<label for="customer">Phone and/or email</label>
+<input type = "text"></input>
+<br>
+<br>
+<button type="submit" name="submit" value="submit">Submit</button>
+</form>
+</div>
 </section>
 
   
