--- a/payment-calc.html
+++ b/payment-calc.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./Assets/CSS/style.css" />
+    
     <title>Document</title>
 </head>
 <body>
@@ -91,6 +91,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="./Assets/JS/script.js"></script>
+    <script src="./Assets/Javascript/paymentscript.js"></script>
 </body>
 </html>
