fixed spacing issues around bottom h3 colon

--- a/payment-calc.html
+++ b/payment-calc.html
@@ -78,7 +78,7 @@
                 <div class="col-auto my-1 d-flex justify-content-center">
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
-                <h3 class= "d-flex justify-content-center" >Your payment is: <span id = "paymentValue"></span></h3>
+                <h3 class= " m-3 d-flex justify-content-center" id = "paymentValue"></h3>
             </div>
               </form>
 
