--- a/index.html
+++ b/index.html
@@ -15,18 +15,6 @@
     <h1>MAUNNY</h1> 
    
 
-
-
-    <!-- 
-please make draw.io, then pseudocode , consult famous sites 
-     -->
-
-
-
-
-
-
-
      <!--following  is a mix choice-->
     <!-- <h1>MA<span class="logo-colour-mix1">UN</span><span class="logo-colour-mix2">NY</span></h1> -->
     <nav>
@@ -50,8 +38,12 @@ please make draw.io, then pseudocode , consult famous sites
 </header>
 <section class= "container">
   <div class = "heading"><h1>Vehicle Search Inquiry</h1></div>
-  <div class = "inquiry">
+  <br>
+  <br>
+  <div class = "flexContainer">
     <!-- this part will have 2 divs 50%, one inquiryText and other inquiryPicture for picture section, change id and class names as needed  -->
+   <div class = "inquiry">
+     <!-- this is left div beg -->
     <br>
     <br>
     <br>
@@ -118,21 +110,26 @@ please make draw.io, then pseudocode , consult famous sites
   <button type="submit" name="submit" value="submit">Submit</button>
 </form>
   </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+  <!-- this is end of left div -->
+
+
+
+  <div class = "carPictures">
+    <!-- insert place holder -->
+
+    <!-- <img src="http://goo.gl/ijai22"/> -->
+    <img src="./assets/images/IMG_3718.jpg">
+  </div>
+<!-- this is the picture div -->
+
+
+
+
+
+
+</div>
+<!-- this is parent boundary div for both left and right div ending -->
+
 <div class = "interest">
 <form class = "interest">
   <br>
@@ -148,7 +145,10 @@ please make draw.io, then pseudocode , consult famous sites
 <input type = "text"></input>
 <br>
 <br>
+<br>
 <button type="submit" name="submit" value="submit">Submit</button>
+<br>
+<br>
 </form>
 </div>
 </section>
