added car pictures and section to display

--- a/index.html
+++ b/index.html
@@ -118,10 +118,13 @@
     <!-- insert place holder -->
 
     <!-- <img src="http://goo.gl/ijai22"/> -->
-    <img src="./assets/images/IMG_3718.jpg">
+    <img src="./assets/images/car-pictures/chevrolet.equinox.png"/>
   </div>
 <!-- this is the picture div -->
+  <div class = "stockDisplay">
 
+    <!-- this is for stock number use in js to display stock, may have to use flex box #, make sure bottom margin of page fits -->
+  </div>
 
 
 
