added vehicles, need to add half more, vehicles could be seen

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <div class = "carPictures">
     <!-- this is right div of container div  -->
 <div class = "imageDisplay">
-    <img id = carDisplay/> 
+    <img id = "carDisplay"/> 
     <!-- insert place holder div -->
 </div>
 
@@ -146,7 +146,7 @@
 <br>
 <label for="customer"><h4>Select vehicle</h4></label>
 <br>
-  <label for="customer">Stock# of vehicle</label>
+  <label for="customer">Stock number</label>
 <input type = "text"></input>
 <label for="customer">Your name</label>
 <input type = "text"></input>
