--- a/index.html
+++ b/index.html
@@ -268,6 +268,21 @@
         </div>
       </div>
 </div>
+<div class="modal fade" id="modalNegCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Input Error!</h5>
+        </div>
+        <div class="modal-body">
+          <p>Your down payment is higher than the price</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default modalCloseBtn" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+</div>
 
 
 </section>
