--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
 <section>
 
 
-  <div>
+  <section class = "container">
         
-    <div class = "card m-5 bg-secondary">
-        <h3><span></span></h3>
+    <div >
+        <div class = "heading"><h1>Payment Calculator</h1></div>
 
-        <form class = " m-5 bg-white py-3" id = "my-form">
+        <form class = "" id = "my-form">
             
             <div class="form-row align-items-center d-flex justify-content-center">
                 <div class="col-auto my-1 px-3 d-flex w-50">
@@ -235,7 +235,7 @@
 
     </div>
 
-</div>
+  </container>
 
 
 <div class="modal fade" id="modalPriceCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
