--- a/index.html
+++ b/index.html
@@ -60,66 +60,66 @@
     <br>
     <form>
     <label for="cars">Year:</label>
-  <select id="year">
-    <option value="2006">2006</option>
-    <option value="2007">2007</option>
-    <option value="2008">2008</option>
-    <option value="2009">2009</option>
-    <option value="2010">2010</option>
-    <option value="2011">2011</option>
-    <option value="2012">2012</option>
-    <option value="2013">2013</option>
-    <option value="2014">2014</option>
-    <option value="2015">2015</option>
-    <option value="2016">2016</option>
-    <option value="2017">2017</option>
-    <option value="2018">2018</option>
-    <option value="2019">2019</option>
-    <option value="2020">2020</option>
-    <option value="2021">2021</option>
-    <option value="YYYY" selected>YYYY</option>
+    <select id="year">
+      <option value="2006">2006</option>
+      <option value="2007">2007</option>
+      <option value="2008">2008</option>
+      <option value="2009">2009</option>
+      <option value="2010">2010</option>
+      <option value="2011">2011</option>
+      <option value="2012">2012</option>
+      <option value="2013">2013</option>
+      <option value="2014">2014</option>
+      <option value="2015">2015</option>
+      <option value="2016">2016</option>
+      <option value="2017">2017</option>
+      <option value="2018">2018</option>
+      <option value="2019">2019</option>
+      <option value="2020">2020</option>
+      <option value="2021">2021</option>
+      <option value="YYYY" selected>YYYY</option>
+   </select>
+  <br>
+  <br>
+  <label for="cars">Make:</label>
+  <select id="make">
+    <option value="GM">GM</option>
+    <option value="Ford">Ford</option>
+    <option value="Chrysler">Chrysler</option>
+    <option value="Toyota">Toyota</option>
+    <option value="Lexus">Kia</option>
+    <option value="Nissan">Nissan</option>
+    <option value="Mitsibuishi">Mitsibuishi</option>
+    <option value="Honda">Honda</option>
+    <option value="Mazda">Mazda</option>
+    <option value="Kia">Kia</option>
+    <option value="Hyundai">Hyundai</option>
+    <option value="Subaru">Subaru</option>
+    <option value="Chevrolet">Chevrolet</option>
+    <option value="Mercedes">Mercedes</option>
+    <option value="BMW">BMW</option>
+    <option value="Volkswagen">Volkswagen</option>
+    <option value="Porsche">Porsche</option>
+    <option value="Acura">Acura</option>
+    <option value="Dodge">Dodge</option>
+    <option value="Jeep">Jeep</option>
+    <option value="YYYY" selected>----</option>
   </select>
-<br>
-<br>
-<label for="cars">Make:</label>
-<select id="make">
-  <option value="GM">GM</option>
-  <option value="Ford">Ford</option>
-  <option value="Chrysler">Chrysler</option>
-  <option value="Toyota">Toyota</option>
-  <option value="Lexus">Kia</option>
-  <option value="Nissan">Nissan</option>
-  <option value="Mitsibuishi">Mitsibuishi</option>
-  <option value="Honda">Honda</option>
-  <option value="Mazda">Mazda</option>
-  <option value="Kia">Kia</option>
-  <option value="Hyundai">Hyundai</option>
-  <option value="Subaru">Subaru</option>
-  <option value="Chevrolet">Chevrolet</option>
-  <option value="Mercedes">Mercedes</option>
-  <option value="BMW">BMW</option>
-  <option value="Volkswagen">Volkswagen</option>
-  <option value="Porsche">Porsche</option>
-  <option value="Acura">Acura</option>
-  <option value="Dodge">Dodge</option>
-  <option value="Jeep">Jeep</option>
-  <option value="YYYY" selected>----</option>
-</select>
 <!-- you can use getelementbyID and attach models when users click on make, as event listener, list can populate for that make for models-->
-<br>
-<br>
-<label for="cars">Mileage in km:</label>
-<select id="Mileage">
-  <option value="50">0 to 50,000 km</option>
-  <option value="100">50,000 to 1,00,000 km</option>
-  <option value="150">1,00,000 to 1,50,000 km</option>
-  <option value="200">1,50,000 to 2,00,000 km</option>
-  <option value="250">2,00,000 to 2,50,000 km</option>
+  <br>
+  <br>
+  <label for="cars">Mileage in km:</label>
+  <select id="Mileage">
+    <option value="50">0 to 50,000 km</option>
+    <option value="100">50,000 to 1,00,000 km</option>
+    <option value="150">1,00,000 to 1,50,000 km</option>
+    <option value="200">1,50,000 to 2,00,000 km</option>
+    <option value="250">2,00,000 to 2,50,000 km</option>
   </select>
   <br>
   <br>
   <button id = "submitBtn" type="submit" name="submit" value="submit">Submit</button>
-</form>
+  </form>
   </div>
   <!-- this is end of left div -->
 
@@ -128,17 +128,17 @@
 
   <div class = "carPictures">
     <!-- this is right div of container div  -->
-<div class = "imageDisplay">
-    <img id = "carDisplay"/> 
+    <div class = "imageDisplay">
+      <img id = "carDisplay"/> 
     <!-- insert place holder div -->
-</div>
+    </div>
 
-  <div id = "stockDisplay">
+    <div id = "stockDisplay">
 
     <!-- this is for stock number use in js to display stock, may have to use flex box #, make sure bottom margin of page fits -->
-  </div>
+    </div>
 <!-- this is end of car Pictures div -->
-</div>
+  </div>
 
 
 
@@ -150,34 +150,33 @@
 <br>
 <br>
 
-<div class = "interest">
-<form class = "interest">
-  <br>
-<br>
-<br>
-<label for="customer"><h4>Select vehicle</h4></label>
-<br>
-  <label for="customer">Stock number</label>
-<input type = "text"></input>
-<label for="customer">Your name</label>
-<input type = "text"></input>
-<label for="customer">Phone and/or email</label>
-<input type = "text"></input>
-<br>
-<br>
-<br>
-<button type="submit" name="submit" value="submit">Submit</button>
-<br>
-<br>
-<br>
-</form>
+<div class = "">
+  <form class = "interest">
+    <br>
+    <br>
+    <br>
+    <label for="customer"><h4>Select vehicle</h4></label>
+    <br>
+    <label for="customer">Stock number</label>
+    <input type = "text"></input>
+    <label for="customer">Your name</label>
+    <input type = "text"></input>
+    <label for="customer">Phone and/or email</label>
+    <input type = "text"></input>
+    <br>
+    <br>
+    <br>
+    <button type="submit" name="submit" value="submit">Submit</button>
+    <br>
+    <br>
+    <br>
+  </form>
 </div>
 </section>
 <section>
 
 
   <section class = "container">
-        
     <div >
         <div class = "heading"><h1>Payment Calculator</h1></div>
 
