--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 
 <!-- <div class = "carInfo"> -->
 
-  <div class = "carPictures col-6 d-flex">
+  <div class = "carPictures">
     <!-- this is right div of container div  -->
-    <div class = "imageDisplay d-flex w-100">
-      <img id = "carDisplay w-100"/> 
+    <div class = "imageDisplay">
+      <img id = "carDisplay"/> 
     <!-- insert place holder div -->
     </div>
-    <div id = "stockDisplay" class = " d-flex w-100">
+    <div id = "stockDisplay" class = "">
     <!-- this is for stock number use in js to display stock, may have to use flex box #, make sure bottom margin of page fits -->
     </div>
 <!-- this is end of car Pictures div -->
