--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <img id = "carDisplay"/> 
     <!-- insert place holder div -->
     </div>
-    <div id = "stockDisplay" class = "">
+    <div id = "stockDisplay" >
     <!-- this is for stock number use in js to display stock, may have to use flex box #, make sure bottom margin of page fits -->
     </div>
 <!-- this is end of car Pictures div -->
