--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <div class = "carPictures col-6 d-flex">
     <!-- this is right div of container div  -->
     <div class = "imageDisplay d-flex w-100">
-      <img id = "carDisplay w-100"/> 
+      <img id = "carDisplay"/> 
     <!-- insert place holder div -->
     </div>
     <div id = "stockDisplay" class = " d-flex w-100">
@@ -293,180 +293,3 @@
 </html>
 
 
-
-
-<!-- 
-new design: refer carklicks to merge data
-pg 1: landing page
-
-header, nav
-logo: Make sure it looks simple , generic and illustrative with very simple single sign and simple object 
-
-Maunny has all dealership operations online 
-
-Money is Maunny and Maunny is money. 
-
-
- top 4 and contact at bottom, forms and chat bar, following are the sections, sign up button to be a member what free services you will get, use facebook/google login
-
-1. First section vehicle pics demos/models create kick energetic motivation, with chat with link to main application form for maunny’s club . Hit button form will come,
-lead generation vehicle search suggestions (only suggestions email, no force, if interested call)
-
-2. payment calculator
-You can link carfax report on your site and get data from other sites, same thing for credit check, third link to sell vehicle trade in 
-
-3.
-First section vehicle demos with chat with link to main application form for maunny’s club . Hit button form will come, 
-water sport, motorsport, McLaren F1 car racing, NASCAR, bike wear, motor cycle clothing 
-register to get free T-shirt , design yourself
-Design your own clothing, choose your logo style and positioning, choose your size and shape
-
-4.
-You can provide technical help through mechanics, recommendations, incl for DY parts, quotations, 
-Section reviews with graphs if any, trade show reviews and reviews in general for purchase 
-
-5. Testimonials (can include videos here)
-
-6. contact us and copyright
-
-
-
-
-pg 2. Sales: search a vehicle new and used , reviews
-
-
-
-
-
-pg 3. Finance: payment calculator, online consult
-
-pg 4. Sports and auto sport clothing special deals, online change room size 
-
-pg 5. Window mechanic for service advice and scheduler, reviews and manuals
-
-pg 6. contact us
-
-
-text and logo colour
-color: 1. royal blue 
-2. blueviolet 
-3. orchid 
-
-
-//Step #1: Build a Small Application: use 3rd party API to import some valuable data from other sides
-With your new skills, you may be tempted to incorporate external data in your existing portfolio, like displaying today's weather. But why not take things a step further? Try building a small application that's enticing to prospective employers. For example, you could build a dynamic weather app that uses the browser API to get the user's location, then makes a request to an external API to display the weather. Be sure to push the final page to GitHub, get a live site going, and write a fully formed README file.
-
-
-//pseudocode
-On the left menu bar you can choose options on the site, such as draggable to get the demo how to use it 
-Maunny chat or dialougue box can use modal bootstrap properties, https://getbootstrap.com/docs/4.3/components/modal/
-For Maunny you will use similar array style for selections by user as similar to password generator, study arrays to depth and and you will be pushing arrays, storing info in local storage or variables
-Also you can create taskinator/task or task master to create schedules for people to trace their service schedule 
-Form Reset: https://developer.mozilla.org/en-US/docs/Web/API/HTMLFormElement/reset
-Submit button: and add the following code in its place:
-var formEl = document.querySelector("#task-form");
-At the bottom of script.js, remove the code to add an event listener to buttonEl and add the following code in its place:
-formEl.addEventListener("submit", createTaskHandler);
-Maunny list dropdown
-<div class="form-group">
-  <select name="task-type">
-    <option value="" disabled selected>Pick a task type</option>
-    <option value="Print">Print</option>
-    <option value="Web">Web</option>
-    <option value="Mobile">Mobile</option>
-  </select>
-</div>
-To import a Google Font, you can copy the font's URL from the Google Fonts library and then paste it in your HTML. For this challenge, we'll import the Lobster font. 
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight
-You can use double image techniques as mentioned in email
-
-
-
-
-old planning to be fixed: 
-
-For whole website: Main 6 colours, main 3 on top
-
-Other 3 are background colours only 
-1. white
-2. light atric ice
-2. light aquamarine 
-
- 
-
-LOGO:
-
-Modern fonts
-
-1. LOGO https://visme.co/blog/modern-fonts/     ‘Kayak’
- 
-
-2. For logo and some writing, Maunny century gothic
-
- 
-
-3. For major writing 
-
-Maunny Halvetica 
-
-
-HERE 
-
-https://www.logaster.com/blog/how-to-choose-font-for-logo/
-
-use tips from peter, see videos and check search
-
- 
-
-https://www.google.com/search?q=how+to+choose+fonts+for+logo&rlz=1C5CHFA_enCA860CA860&oq=how+to+choose+fonts+for+logo&aqs=chrome..69i57.12276j0j7&sourceid=chrome&ie=UTF-8
-
-Important changes: 
-
- 
-
-Automotive Web Solutions
-
-
-
-https://800response.com/lp/generate-leads-with-vanity-800-numbers/?gclid=EAIaIQobChMIucKUqrPb7AIVCZSzCh0wnQg9EAAYAyAAEgLCH_D_BwE 
-
-
-type "how to get 1800 number" on google 
-
- 
-
-https://www.youtube.com/results?search_query=how+to+choose+fonts+for+logo
-
-
-https://www.youtube.com/results?search_query=how+to+choose+colour+theme+for+website
-
- 
-
-Maunny makes money
-
- 
-
-modern millionaires (check google) for marketing tip
-
-Small logo in sextagon
-
-
-
-
-
-Other two pages 3 sections each, one for credit app (payment calculator) save time if not sure be approved (1 to 1 with finance manager), and one for trade or sell in vehicle
-
-Through Maunny’s club: (Main target is to get people into this club)
-
- 
-
-Main corporation Maunny Inc., copyrights and tm 
-
-Actual wording: ‘Maunny’s Automotive Club’ 
-
-HERE
-
--->
-
- 
